--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
     width: 50vw;
     right: 100vh;
     position: absolute;
-    left: 700px;
+    left: 52%;
     bottom: 65px;
   }
   
@@ -34,8 +34,7 @@ body {
   .left h1{
     position: absolute;
     right: 325px;
-
-    top: 60px;
+    top: 10%;
   }
 
   select {
