--- a/style.css
+++ b/style.css
@@ -66,10 +66,13 @@ body {
   }
 
   .left{
-    width: 50vw;
-    right: 100vh;
-    align-items: center;
-    justify-content: right;
+      width: 50vw;
+      right: 100vh;
+      display:flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+
 }
 
 .left-img{
