--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Freeman&display=swap'); 
 body {     
-  background-color:  #e4e9ff; /* cor de fundo claro terroso */     
-  color: #503b31; /* cor da fonte escura terrosa */       
+  background-color:  #e4e9ff;    
+  color: #4a627e;       
   font-family: "Freeman", sans-serif;       
   font-weight: 400;       
   font-style: normal;   
